--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,12 @@
 body {
   margin: 0;
   min-width: 250px;
+  background: linear-gradient(
+    rgba(243, 230, 230, 0.808),
+    rgba(241, 240, 238, 0.767)
+  );
 }
+
 
 /* Include the padding and border in an element's total width and height */
 * {
@@ -83,7 +88,7 @@ ul li.checked::before {
 
 /* Style the header */
 .header {
-  background-color: #329ba8;
+  background-color: #fa8989;
   padding: 30px 40px;
   color: white;
   text-align: center;
@@ -118,7 +123,7 @@ input {
   font-size: 16px;
   cursor: pointer;
   transition: 0.3s;
-  border-radius: 0;
+  border-radius: 3px;
 }
 
 .addBtn:hover {
@@ -129,7 +134,7 @@ input {
 <body>
 
 <div id="myDIV" class="header">
-  <h2 style="margin:5px">Django To Do List App</h2>
+  <h2 style="margin:5px">To-Do List App</h2>
   <form action="" method="POST">
     {% csrf_token %}
     <input type="text" name="title" id="myInput" placeholder="Title...">
