--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Django To Do List App</title>
+<title> Pepz Todo App</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
