--- a/templates/index.html
+++ b/templates/index.html
@@ -137,7 +137,7 @@ input {
   <h2 style="margin:5px">To-Do List App</h2>
   <form action="" method="POST">
     {% csrf_token %}
-    <input type="text" name="title" id="myInput" placeholder="Add todo...">
+    <input type="text" name="title" id="myInput" placeholder="Type todo...">
     <button type="submit" class="addBtn">Add</button>
   </form>
 </div>
